# SimulationWorkBench

./: CMakeLists.txt  README.md
.github/workflows/: core-ci.yml
app/: CMakeLists.txt  LogPanel.cpp  LogPanel.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ParametersPanel.cpp  ParametersPanel.h  ParametersPanel.ui  SimulationController.h  logpanel.cpp  logpanel.h  main.cpp  mainwindow.cpp  parameterspanel.cpp  parameterspanel.h  simulationcontroller.cpp
core/: CMakeLists.txt  SimulationConfig.cpp  SimulationConfig.h  SimulationEngine.cpp  SimulationEngine.h  SimulationEngine.hdir  SimulationResult.cpp  SimulationResult.h  simulationconfig.cpp  simulationengine.cpp  simulationresult.h
tests/: CMakeLists.txt  tst_core_logic.cpp
viz/: CMakeLists.txt  SimulationView.cpp  SimulationView.h  VTKAdapter.cpp  VTKAdapter.h  simulationview.cpp
